--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sirius Alvorada | Clube de Desbravadores</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="images/D1.webp" type="image/x-icon">
 </head>
 <body>
     <nav>
