--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div class="img"><img src="images/D1.webp" alt="Emblema D1" width="60rem"></div>
+        <div class="img"><img class="d1" src="images/D1.webp" alt="Emblema D1" width="60rem"></div>
         <div class="nav">
             <div>Quem nós somos?</div>
             <div>Projetos</div>
@@ -21,8 +21,32 @@
         <p>Clube de Desbravadores</p>
     </header>
     <main>
-        <section>
-
+        <section class="light">
+            <aside class="light">
+                <img src="images/aside.jpg" alt="Arte DBV">
+            </aside>
+            <article class="light">
+                <h1>Quem nós somos?</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas eligendi, maiores suscipit dolorem officia earum nihil blanditiis vero magni repudiandae! Quae aperiam quia aliquam quam amet exercitationem maiores fuga aut. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur et ut a nostrum quos laudantium ad corporis, earum praesentium dolorum debitis eveniet perspiciatis numquam. Eaque adipisci a id soluta et.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, neque natus qui ut fugiat similique reiciendis non doloribus officiis itaque sapiente quae fuga culpa commodi omnis iste saepe illum veniam?</p>
+            </article>
+        </section>
+        <section class="dark">
+            <h1>Nossos Projetos</h1>
+            <div id="container">
+                <article class="dark">
+                    <img class="fotos" src="images/fundo-branco.webp" alt="Imagem">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, doloribus repudiandae eum eius voluptatum molestias.</p>
+                </article>
+                <article class="dark">
+                    <img class="fotos" src="images/fundo-branco.webp" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas officiis praesentium soluta corrupti quis magnam eveniet alias.</p>
+                </article>
+                <article class="dark">
+                    <img class="fotos" src="images/fundo-branco.webp" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit aliquid non veniam sint, quos sit ab alias enim eaque, unde provident ipsum dolorem exercitationem facilis. Blanditiis odio et nostrum saepe!</p>
+            </div>
+            </article>
         </section>
     </main>
 </body>
