--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="nav">
             <div>Quem nós somos?</div>
             <div>Projetos</div>
+            <div>Sobre</div>
             <div>Doações</div>
         </div>
     </nav>
@@ -21,11 +22,11 @@
         <p>Clube de Desbravadores</p>
     </header>
     <main>
-        <section class="light">
-            <aside class="light">
+        <section class="content0">
+            <aside class="content0">
                 <img src="images/aside.jpg" alt="Arte DBV">
             </aside>
-            <article class="light">
+            <article class="content0">
                 <h1>Quem nós somos?</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas eligendi, maiores suscipit dolorem officia earum nihil blanditiis vero magni repudiandae! Quae aperiam quia aliquam quam amet exercitationem maiores fuga aut. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur et ut a nostrum quos laudantium ad corporis, earum praesentium dolorum debitis eveniet perspiciatis numquam. Eaque adipisci a id soluta et.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, neque natus qui ut fugiat similique reiciendis non doloribus officiis itaque sapiente quae fuga culpa commodi omnis iste saepe illum veniam?</p>
@@ -36,16 +37,37 @@
             <div id="container">
                 <article class="dark">
                     <img class="fotos" src="images/fundo-branco.webp" alt="Imagem">
+                    <h2>title</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, doloribus repudiandae eum eius voluptatum molestias.</p>
                 </article>
                 <article class="dark">
                     <img class="fotos" src="images/fundo-branco.webp" alt="">
+                    <h2>title</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas officiis praesentium soluta corrupti quis magnam eveniet alias.</p>
                 </article>
                 <article class="dark">
                     <img class="fotos" src="images/fundo-branco.webp" alt="">
+                    <h2>title</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit aliquid non veniam sint, quos sit ab alias enim eaque, unde provident ipsum dolorem exercitationem facilis. Blanditiis odio et nostrum saepe!</p>
             </div>
+            </article>
+        </section>
+        <section class="content1">
+            <h1>Mais sobre o clube</h1>
+            <article>
+                <img src="" alt="">
+                <h2>Especialidades</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aut deserunt architecto nesciunt voluptates facilis repudiandae labore, ducimus saepe, repellat magnam delectus autem dignissimos ab similique quidem pariatur. Itaque, consequatur!</p>
+            </article>
+            <article>
+                <img src="" alt="">
+                <h2>Classes</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nesciunt dolorem natus ipsa rerum. Eligendi ab quasi illum est, perferendis placeat voluptas fuga debitis doloremque? Dolor incidunt a sit? Hic!</p>
+            </article>
+            <article>
+                <img src="" alt="">
+                <h2>Cerimônias</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur in quibusdam mollitia ipsa accusantium dicta dolorum? Aliquam aliquid non nesciunt quia deserunt consequuntur, nostrum omnis magni voluptatibus eaque voluptatem minus.</p>
             </article>
         </section>
     </main>
