--- a/index.html
+++ b/index.html
@@ -54,17 +54,19 @@
         </section>
         <section class="content1">
             <h1>Mais sobre o clube</h1>
-            <article>
-                <img src="" alt="">
-                <h2>Especialidades</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aut deserunt architecto nesciunt voluptates facilis repudiandae labore, ducimus saepe, repellat magnam delectus autem dignissimos ab similique quidem pariatur. Itaque, consequatur!</p>
+            <article class="toLeft">
+                <img src="images/especialidadesp.jpg" alt="">
+                <div>
+                    <h2>Especialidades</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aut deserunt architecto nesciunt voluptates facilis repudiandae labore, ducimus saepe, repellat magnam delectus autem dignissimos ab similique quidem pariatur. Itaque, consequatur!</p>
+                </div>
             </article>
-            <article>
+            <article class="toRight">
                 <img src="" alt="">
                 <h2>Classes</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nesciunt dolorem natus ipsa rerum. Eligendi ab quasi illum est, perferendis placeat voluptas fuga debitis doloremque? Dolor incidunt a sit? Hic!</p>
             </article>
-            <article>
+            <article class="toLeft">
                 <img src="" alt="">
                 <h2>Cerimônias</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur in quibusdam mollitia ipsa accusantium dicta dolorum? Aliquam aliquid non nesciunt quia deserunt consequuntur, nostrum omnis magni voluptatibus eaque voluptatem minus.</p>
