--- a/index.html
+++ b/index.html
@@ -23,13 +23,22 @@
     </header>
     <main>
         <section class="content0">
-            <aside class="content0">
-                <img src="images/aside.jpg" alt="Arte DBV">
-            </aside>
-            <article class="content0">
-                <h1>Quem nós somos?</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas eligendi, maiores suscipit dolorem officia earum nihil blanditiis vero magni repudiandae! Quae aperiam quia aliquam quam amet exercitationem maiores fuga aut. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur et ut a nostrum quos laudantium ad corporis, earum praesentium dolorum debitis eveniet perspiciatis numquam. Eaque adipisci a id soluta et.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, neque natus qui ut fugiat similique reiciendis non doloribus officiis itaque sapiente quae fuga culpa commodi omnis iste saepe illum veniam?</p>
+            <h1>Quem são os Desbravadores?</h1>
+            <article class="dbv">
+                <img src="images/lenço dbv.jpg" alt="Lenço">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, quod? Consectetur assumenda nesciunt distinctio molestiae voluptates autem sit laudantium impedit! Amet consequatur deserunt, animi ab labore nobis temporibus. Perferendis, maxime. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, expedita? Tempora repellendus beatae fuga harum fugiat necessitatibus ab dicta ipsum. Illo doloremque quas, voluptatem necessitatibus autem officia fugit fuga eligendi?</p>
+                </div>
+            </article>
+            <article class="us">
+                <aside class="usImg">
+                    <img src="images/bandeira.jpeg" alt="Arte DBV">
+                </aside>
+                <div>
+                    <h1>Quem nós somos?</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas eligendi, maiores suscipit dolorem officia earum nihil blanditiis vero magni repudiandae! Quae aperiam quia aliquam quam amet exercitationem maiores fuga aut. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur et ut a nostrum quos laudantium ad corporis, earum praesentium dolorum debitis eveniet perspiciatis numquam. Eaque adipisci a id soluta et.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, neque natus qui ut fugiat similique reiciendis non doloribus officiis itaque sapiente quae fuga culpa commodi omnis iste saepe illum veniam?</p>
+                </div>
             </article>
         </section>
         <section class="dark">
@@ -48,7 +57,7 @@
                 <article class="dark">
                     <img class="fotos" src="images/fundo-branco.webp" alt="">
                     <h2>title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit aliquid non veniam sint, quos sit ab alias enim eaque, unde provident ipsum dolorem exercitationem facilis. Blanditiis odio et nostrum saepe!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit aliquid non veniam sint, quos sit ab alias enim eaque, unde provident ipsum dolorem exercitationem facilis.</p>
             </div>
             </article>
         </section>
