--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <div class="img"><img class="d1" src="images/D1.webp" alt="Emblema D1" width="60rem"></div>
         <div class="nav">
+            <div>Início</div>
             <div>Quem nós somos?</div>
             <div>Projetos</div>
             <div>Sobre</div>
@@ -62,23 +63,31 @@
             </article>
         </section>
         <section class="content1">
-            <h1>Mais sobre o clube</h1>
+            <h1>Sobre o clube</h1>
             <article class="toLeft">
-                <img src="images/especialidadesp.jpg" alt="">
+                <img src="images/especialidadesp.jpg" alt="Especialidades">
                 <div>
                     <h2>Especialidades</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aut deserunt architecto nesciunt voluptates facilis repudiandae labore, ducimus saepe, repellat magnam delectus autem dignissimos ab similique quidem pariatur. Itaque, consequatur!</p>
                 </div>
             </article>
             <article class="toRight">
-                <img src="" alt="">
-                <h2>Classes</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nesciunt dolorem natus ipsa rerum. Eligendi ab quasi illum est, perferendis placeat voluptas fuga debitis doloremque? Dolor incidunt a sit? Hic!</p>
+                <img src="images/classes0.jpg" alt="Classes">
+                <div>
+                    <h2>Classes</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nesciunt dolorem natus ipsa rerum. Eligendi ab quasi illum est, perferendis placeat voluptas fuga debitis doloremque? Dolor incidunt a sit? Hic!</p>
+                </div>
             </article>
             <article class="toLeft">
-                <img src="" alt="">
-                <h2>Cerimônias</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur in quibusdam mollitia ipsa accusantium dicta dolorum? Aliquam aliquid non nesciunt quia deserunt consequuntur, nostrum omnis magni voluptatibus eaque voluptatem minus.</p>
+                <div>
+
+                </div>
+                <div>
+
+                </div>
+                <div>
+
+                </div>
             </article>
         </section>
     </main>
