--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <img class="fotos" src="images/fundo-branco.webp" alt="">
                     <h2>title</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit aliquid non veniam sint, quos sit ab alias enim eaque, unde provident ipsum dolorem exercitationem facilis.</p>
+                </article>
             </div>
-            </article>
         </section>
         <section class="content1">
             <h1>Sobre o clube</h1>
@@ -68,25 +68,41 @@
                 <img src="images/especialidadesp.jpg" alt="Especialidades">
                 <div>
                     <h2>Especialidades</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aut deserunt architecto nesciunt voluptates facilis repudiandae labore, ducimus saepe, repellat magnam delectus autem dignissimos ab similique quidem pariatur. Itaque, consequatur!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aut deserunt architecto nesciunt voluptates facilis repudiandae labore, ducimus saepe, repellat magnam delectus autem dignissimos ab similique quidem pariatur. Itaque, consequatur! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam ullam quibusdam obcaecati possimus ut vitae distinctio, sunt eligendi, odio accusantium vel repudiandae dolor. Nesciunt consequatur dolorum possimus aliquid fugit officia!</p>
                 </div>
             </article>
             <article class="toRight">
                 <img src="images/classes0.jpg" alt="Classes">
                 <div>
                     <h2>Classes</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nesciunt dolorem natus ipsa rerum. Eligendi ab quasi illum est, perferendis placeat voluptas fuga debitis doloremque? Dolor incidunt a sit? Hic!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nesciunt dolorem natus ipsa rerum. Eligendi ab quasi illum est, perferendis placeat voluptas fuga debitis doloremque? Dolor incidunt a sit? Hic! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, veritatis! Omnis, velit quam temporibus amet hic iste quibusdam animi, doloremque est quaerat accusamus ab obcaecati voluptatem, distinctio pariatur veniam sit.</p>
                 </div>
             </article>
-            <article class="toLeft">
+            <h2 id="title">Cerimônias</h2>
+            <article class="boxes">
                 <div>
-
+                    <img src="" alt="">
+                    <h3>Admissão de Lenço</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa aliquam aut quisquam totam harum quaerat, placeat voluptatem sapiente? Earum, consectetur delectus ex ratione est mollitia nisi aspernat.</p>
                 </div>
                 <div>
-
+                    <img src="" alt="">
+                    <h3>Investiduras</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi debitis veritatis magni, nihil nesciunt similique mollitia quam impedit nobis consequatur? Beatae officia est ipsum hic quasi earum.</p>
                 </div>
                 <div>
-
+                    <img src="" alt="">
+                    <h3>Dia Mundial dos Desbravadores</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae sed libero odit expedita rerum laudantium dolores vitae aspernatur fuga ipsum? Nobis, ducimus beatae provident animi vel dolorem.</p>
+                </div>
+            </article>
+        </section>
+        <section class="dark02">
+            <article>
+                <h1>Doações</h1>
+                <div>
+                    <img src="" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quod voluptatibus corrupti dicta, nobis molestias ullam nesciunt exercitationem aspernatur aliquid qui mollitia aut id aliquam, fugiat magni quasi? Hic, in!</p>
                 </div>
             </article>
         </section>
