--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <article>
                 <h1>Doações</h1>
                 <div>
-                    <img src="" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quod voluptatibus corrupti dicta, nobis molestias ullam nesciunt exercitationem aspernatur aliquid qui mollitia aut id aliquam, fugiat magni quasi? Hic, in!</p>
+                    <img class="qrcode" src="images/qr code.png" alt="Qr Code">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quod voluptatibus corrupti dicta, nobis molestias ullam nesciunt exercitationem aspernatur aliquid qui mollitia aut id aliquam, fugiat magni quasi? Hic, in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum natus expedita tenetur aut at fuga voluptatem, commodi ipsa eos magni? Nulla aperiam nisi placeat cupiditate esse necessitatibus, quis enim delectus.</p>
                 </div>
             </article>
         </section>
