--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div class="img"><img class="d1" src="images/D1.webp" alt="Emblema D1" width="60rem"></div>
+        <div class="mark">Desbravadores SA</div>
         <div class="nav">
             <div>Início</div>
             <div>Quem nós somos?</div>
@@ -36,7 +36,7 @@
                     <img src="images/bandeira.jpeg" alt="Arte DBV">
                 </aside>
                 <div>
-                    <h1>Quem nós somos?</h1>
+                    <h1>Quem <span id="handWriting">nós</span> somos?</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas eligendi, maiores suscipit dolorem officia earum nihil blanditiis vero magni repudiandae! Quae aperiam quia aliquam quam amet exercitationem maiores fuga aut. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur et ut a nostrum quos laudantium ad corporis, earum praesentium dolorum debitis eveniet perspiciatis numquam. Eaque adipisci a id soluta et.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, neque natus qui ut fugiat similique reiciendis non doloribus officiis itaque sapiente quae fuga culpa commodi omnis iste saepe illum veniam?</p>
                 </div>
