--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav>
+        <div><img src="images/D1.webp" alt="D1" width="60px" class="d1"></div>
         <div class="mark">Desbravadores SA</div>
         <div class="nav">
             <div>Início</div>
@@ -20,7 +21,7 @@
     </nav>
     <header>
         <h1>Sirius Alvorada</h1>
-        <p>Clube de Desbravadores</p>
+        <p id="title">Clube de Desbravadores</p>
     </header>
     <main>
         <section class="content0">
